--- a/wercker.yml
+++ b/wercker.yml
@@ -1,12 +1,10 @@
-box: darron/ubuntu14.04@1.0.2
+box: darron/go-wercker
 no-response-timeout: 10
 build:
   steps:
     - script:
         name: prepare the required items.
         code: |
-          sudo apt-get update
-          sudo apt-get install -y libssl-dev unzip curl && sudo gem install fpm-cookery --no-ri --no-rdoc
           sudo curl https://packagecloud.io/install/repositories/darron/consul/script.deb.sh | sudo bash
     - script:
         name: get the source and build
@@ -24,7 +22,6 @@ deploy:
     - script:
         name: push to packagecloud
         code: |
-          sudo gem install package_cloud --no-ri --no-rdoc
           PACKAGECLOUD=$(eval echo "\$PACKAGECLOUD_TOKEN") && echo -e "$PACKAGECLOUD" > ~/.packagecloud && chmod 600 ~/.packagecloud
           DEB_FILE=$(find . -name '*.deb') && package_cloud push darron/consul-template/ubuntu/trusty $DEB_FILE
           DEB_FILE=$(find . -name '*.deb') && package_cloud push darron/octohost/ubuntu/trusty $DEB_FILE
